# EarthObservationDataVisualizer

./: .gitignore  README.md  alembic.ini  database.py  docker-compose.yml  ecosystem.config.js  main.py  package-lock.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
backend/: check_airlines.js  check_roads_schema.js  dockerfile  main.py  package-lock.json  package.json  server.js  test_db.js  test_weather_api.js
backend/geojson-api/: server.js
backend/tests/: db.test.js
dataset/: kacircle.qmd
frontend/: README.md  dockerfile  package-lock.json  package.json  pwa-assets.config.js  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  Map.tsx  globals.d.ts  index.css  main.jsx  main.tsx
frontend/src/components/ui/: DetailsCard.tsx  YearRange.tsx  checkbox.tsx  mode-toggle.tsx  sidebar.tsx
frontend/src/components/ui/controlles/: BrightnessOpacityControl.tsx
frontend/src/components/ui/custom/: virtualized-yearselect.tsx
frontend/src/components/ui/sidebar/: CityMultiSelect.tsx  app-sidebar.tsx  search-form.tsx
map_viz/: database.py  models.py
tests/: conftest.py  test_alembic_migrations.py  test_config.py  test_database.py  test_models.py
