[project]
name = "earthobservationdatavisualizer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "branca>=0.8.2",
    "click==8.3.1",
    "fastapi==0.121.2",
    "folium>=0.20.0",
    "geoalchemy2==0.18.1",
    "geodatasets>=2024.8.0",
    "geojson==3.2.0",
    "geopandas>=1.1.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "mako==1.3.10",
    "mapclassify>=2.10.0",
    "markupsafe==3.0.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.1",
    "shapely>=2.1.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uv==0.9.11",
    "uvicorn==0.38.0",
]
